[tool.poetry]
name = "diviant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
pip = "^24.1.2"
install = "^1.3.5"
opencv-python = "^4.10.0.84"
torch = "^2.3.1"
moviepy = "^1.0.3"
transformers = "^4.42.3"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
